# AiAssist

./: .gitignore  ADDON_ERRORS_TO_FIX.md  BOX_TURTLE_ADDON_README.md  MINECRAFT_DEBUGGER_READY.md  README.md  REQUEST_CONTEXT_DOCUMENTATION.md  monarch_garden.mcaddon  monarch_garden_bp.mcpack  monarch_garden_rp.mcpack  recorded_clicks.json
DnD/combat-ai/: __init__.py  config.py  hex_adapter.py  pyproject.toml
DnD/combat-ai/ai/: __init__.py  base.py  decision.py  intelligence.py  llm_engine.py  rule_engine.py
DnD/combat-ai/models/: __init__.py  action.py  creature.py  orders.py  perception.py
DnD/combat-ai/perception/: __init__.py  awareness.py  map_view.py  vision.py
DnD/combat-ai/tests/: __init__.py  conftest.py  factories.py  test_decision.py  test_llm_engine.py  test_orders.py  test_perception.py  test_rule_engine.py
mcp-servers/gmailcal/: .gitignore  CLAUDE.md  COVERAGE_TRACKING.md  Cargo.toml  INTEGRATION-SUMMARY.md  INTEGRATION.md  QUICKSTART.md  README.md  mcp-test.sh  mise.toml  plan.md
mcp-servers/gmailcal/.notes/: gmail-rs-guide.md  mcp-attr-rs-guide.md  mcp-docs-llm.txt
mcp-servers/gmailcal/benches/: benchmarks.rs
mcp-servers/gmailcal/src/: auth.rs  calendar_api.rs  cli.rs  config.rs  errors.rs  gmail_api.rs  lib.rs  logging.rs  main.rs  oauth.rs  people_api.rs  prompts.rs  server.rs  token_cache.rs  utils.rs
mcp-servers/gmailcal/tests/: FIXING_RUNTIME_CONFLICTS.md  TESTING_STANDARDS.md  TESTS.md  TODO.md  auth_module_tests.rs  calendar_api_mock_tests.rs  calendar_api_tests.rs  calendar_validation_tests.rs  config_module_tests.rs  config_tests.rs  error_recovery_tests.rs  error_tests.rs  extended_integration_tests.rs  gmail_api_integration_tests.rs  gmail_api_mock_tests.rs  gmail_api_tests.rs  gmail_draft_tests.rs  gmail_message_tests.rs  gmail_parsing_edge_tests.rs  gmail_simple_test.rs  helper.rs  integration_tests.rs  logging_final_coverage_tests.rs  logging_module_tests.rs  (+23 more)
(+7454 files in other folders)
